[package]
name = "xbkbremap"
version = "0.1.1"
edition = "2021"

[dependencies]
evdev = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
rdev = { version = "0.5", features = ["unstable_grab", "serialize"] }
